# campaign-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  database.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  server.py
app/: database.py  router_chat.py  router_pf2e.py
engine/: dice.py  encounter.py  hook.py  loot.py
extraction/: 01_audit.py  02_extract.py  03_parse_conditions.py  03_parse_creatures.py  03_parse_feats.py  03_parse_items.py  03_parse_spells.py  04_build_db.py  05_add_translations.py  05b_translations_from_pg.py  manifest.csv  utils.py
extraction/parsed/: conditions.json  creatures.json  feats.json  items.json  spells.json
static/: chat.js  encounter.js  encounter_d100_tables.json  grimoire.js  lang.js  style.css  tables.json  theme.js
static/data/: pf2e_item_roll_tables.json  pf2e_loot_context_profiles.json
static/hooks/: action.json  modifier.json  object.json  who.json
templates/: base.html  bestiary.html  chat.html  encounter.html  grimoire.html  index.html
