[project]
name = "campaign-manager"
version = "0.1.0"
description = "PF2e Campaign Manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.22",
    "starlette==0.46.2",
    "uvicorn[standard]>=0.42.0",
]
